# littlefish

./: .bumpversion.cfg  .gitignore  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bot.py  config.py  dbconfig.py  dev.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  requirements.txt  wizard.py
.github/workflows/: build-docs.yml
docs/: CNAME  README.md  changelog.md  development.md  easter.md  index.html  index.md  package-lock.json  package.json  usage.md
docs/.vuepress/: config.js
docs/.vuepress/theme/components/: Page.vue
docs/.vuepress/theme/layouts/: 404.vue
docs/.vuepress/theme/styles/: palette.styl
docs/assets/templates/: info.tpl
docs/guide/: advanced.md  normal.md
docs/misc/: changelog.md  contribution.md  easter.md
docs/overrides/: main.html
docs/stylesheets/: extra.css  print-page.css
littlefish/: __init__.py  analyze.py  autopvp.py  bilipush.py  calc42.py  dailymap.py  dailystar.py  exclaim.py  group.py  guide.py  info.py  level.py  randi.py  ranking.py  repeat.py  search.py  supercmd.py  version.py
littlefish/_db/: __init__.py  config.py
littlefish/_exclaim/: __init__.py  config.py
littlefish/_game/: __init__.py  config.py  ftpts.py
littlefish/_mswar/: __init__.py  analyzer.py  api.py  config.py  netcore.py  references.py
littlefish/_netcore/: __init__.py  config.py
littlefish/_policy/: __init__.py  config.py  plugin.py  rule.py
mswar/plugins/: admire.py  analyze.py  autorepeat.py  calc42.py  conflict.py  dailymap.py  dailystar.py  database.py  exclaim.py  global_value.py  greeting.py  groupcmd.py  groupmsg.py  guide.py  info.py  level.py  mswar.py  randi.py  ranking.py  recpush.py  saoleiwang.py  supercmd.py
