[tool.poetry]
name = "littlefish"
version = "1.0.5"
description = "A bot for the `Minesweeper League` app."
readme = "README.md"
authors = ["Tony Xiang"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {version = "^2.0.1", extras = ["fastapi"]}
nonebot-adapter-console = "^0.4.0"
nonebot-adapter-onebot = "^2.2.4"
nonebot-plugin-apscheduler = "^0.3.0"
semver = "^2.13.0"
pycryptodome = "^3.9.6"
42points = "^1.2.7"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
nb-cli = "^1.2.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^7.1.5"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"

[tool.nonebot]
adapters = [
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["littlefish"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
